--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="wdd131/week01/styles/layout.css">
+    <link rel="stylesheet" href="styles/layout.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header Content</title>
 </head>
-<nav>
-    <a>Home</a>
-    <a>Projects</a>
-    <a>Services</a>
-    <a>Contact Us</a>
-</nav>
-<body>
+<body class="home-grid">
+    <header>
+        <div >
+            <h1>Header Content</h1>
+        </div>
+        <nav>
+            <a>Home</a>
+            <a>Projects</a>
+            <a>Services</a>
+            <a>Contact Us</a>
+        </nav>
+    </header>
     <main>
-        <h>Main Content</h>
+        <div class="main">
+            <h1>Main Content</h1>
+        </div>
+        <div class="aside">
+            <h2>Aside Content</h2>
+        </div>    
     </main>
-    <right>
-        <h>Aside Content</h>
-    </right>  
+    <footer>
+        <div >
+            <h2>Footer Content</h2>
+        </div>
+        
+    </footer>
 </body>
-<footer>
-    <h>Footer Content</h>
-</footer>
 </html>
