--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="styles/layout.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gracie Burris WDD131</title>
+    <title>Gracie Burris WDD 131</title>
 </head>
 <body class="home-grid">
     <header>
@@ -26,7 +26,7 @@
                 To sit in solemn silence in a dull, dark dock in a pestilential prison with a life-long lock, awaiting the sensation of a short, sharp shock from a cheap and chippy chopper with a big, black block.
                 Betty Botter bought a bit of butter. The butter Betty Botter bought was a bit bitter And made her batter bitter. But a bit of better butter makes better batter. So Betty Botter bought a bit of better butter Making Betty Botter’s bitter batter better.
                 How much wood would a woodchuck chuck if a woodchuck could chuck wood? He would chuck, he would, as much as he could, and chuck as much wood as a woodchuck would if a woodchuck could chuck wood. </p>
-            <img>
+            <img alt="image">
             <p>Peter Piper picked a peck of pickled peppers. A peck of pickled peppers Peter Piper picked. If Peter Piper picked a peck of pickled peppers, where’s the peck of pickled peppers Peter Piper picked?
                 If you must cross a course cross cow across a crowded cow crossing, cross the cross coarse cow across the crowded cow crossing carefully.
                 To sit in solemn silence in a dull, dark dock in a pestilential prison with a life-long lock, awaiting the sensation of a short, sharp shock from a cheap and chippy chopper with a big, black block.
