--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>
-
-        </h1>
+        <h1> WDD 131: Dynamic Web Fundamentals - Gracie AA. Burris</h1>
         <nav>
-            <a>LinkedIn</a>
-            <a>I-Learn</a>
-            <a>Scripture</a>
+            <a href="https://www.linkedin.com/in/gracie-burris-b0761521b/">Linkedin</a>
+            <a href="https://byui.instructure.com/.">I-Learn</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/2?lang=eng&id=p25#p25">Scripture</a>
             <a>Final Project</a>
         </nav>
     </header>
     <main>
-        <section class="card">
-
+        <section class="aboutmecard">
+            <p>My name is Gracie Burris. I am from Oklahoma but I live in Idaho during fall and winter semesters at BYUI. I am pursuing a degree in CIT and will gradute this coming December. I have been married for a year and a half to my husband Braden. I also have a 7 and a half month on son, named Ben.</p>
         </section>
-        <section class="card">
+        <section class="webdevcard">
 
         </section>
     </main>
