added more content and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="WDD 131 - Dynamic Web Fundamentals" content="Gracie Burris">
     <title>WDD 131 - Dynamic Web Fundamentals - Gracie Burris</title>
 </head>
-<body>
+<body class="home-grid">
     <header>
         <h1> WDD 131: Dynamic Web Fundamentals - Gracie AA. Burris</h1>
         <nav>
@@ -19,9 +19,13 @@
     <main>
         <section class="aboutmecard">
             <p>My name is Gracie Burris. I am from Oklahoma but I live in Idaho during fall and winter semesters at BYUI. I am pursuing a degree in CIT and will gradute this coming December. I have been married for a year and a half to my husband Braden. I also have a 7 and a half month on son, named Ben.</p>
+            <img class="card-img" src="images/IMG_1303.JPG" alt="Benjamin and gracie photo">
         </section>
-        <section class="webdevcard">
 
+        <section class="webdevcard">
+            <a href="https://www.udemy.com/topic/Front-End-Web-Development/?utm_source=bing&utm_medium=udemyads&utm_campaign=BG-Orig-LongTail_la.EN_cc.BE_Experiment_2&utm_content=deal4584&utm_term=_._ag_1326013382487324_._ad__._kw_Front%20End%20Web%20Development%20Class_._de_c_._dm__._pl__._ti_kwd-82876834267355:loc-4118_._li_83177_._pd__._&matchtype=b&msclkid=15abb6fe640418589222d0905fd7b3b1"> Udemy</a>
+            <a href="https://www.coursera.org/courses?query=web%20development">Coursera</a>
+            <a href="https://validator.w3.org/">W3C HTML and CSS Validation</a>
         </section>
     </main>
     <footer>
