--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="WDD 131 - Dynamic Web Fundamentals" content="Gracie Burris">
+    <meta name="description" content="A page about me along with some web dev tools!">
+    <meta name="author" content="Gracie Burris">
     <title>WDD 131 - Dynamic Web Fundamentals - Gracie Burris</title>
 </head>
 <body class="home-grid">
     <header>
-        <h1> WDD 131: Dynamic Web Fundamentals - Gracie AA. Burris</h1>
+        <h1> WDD 131 - Dynamic Web Fundamentals - Gracie Burris</h1>
         <nav>
             <a href="https://www.linkedin.com/in/gracie-burris-b0761521b/">Linkedin</a>
             <a href="https://byui.instructure.com/.">I-Learn</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/2?lang=eng&id=p25#p25">Scripture</a>
-            <a>Final Project</a>
+            <a href="https://github.com/bluekerfluffle/wdd131">Final Project</a>
         </nav>
     </header>
     <main>
