--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A page about me along with some web dev tools!">
+    <meta name="description" content="A page that contains my information as well as web developement resources">
     <meta name="author" content="Gracie Burris">
     <title>WDD 131 - Dynamic Web Fundamentals - Gracie Burris</title>
 </head>
