--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/base.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A page that contains my information as well as web developement resources">
@@ -26,8 +27,8 @@
 
         <section class="webdevcard">
             <h2>Web Dev Resources</h2>
-            <img class="dev-img" src="images/th.jpg" alt="Web Dev Photo"
-            <a href="https://www.udemy.com/topic/Front-End-Web-Development/?utm_source=bing&utm_medium=udemyads&utm_campaign=BG-Orig-LongTail_la.EN_cc.BE_Experiment_2&utm_content=deal4584&utm_term=_._ag_1326013382487324_._ad__._kw_Front%20End%20Web%20Development%20Class_._de_c_._dm__._pl__._ti_kwd-82876834267355:loc-4118_._li_83177_._pd__._&matchtype=b&msclkid=15abb6fe640418589222d0905fd7b3b1"> Udemy</a>
+            <img class="dev-img" src="images/th.jpg" alt="Web Dev Photo">
+            <a href="https://www.udemy.com/topic/Front-End-Web-Development/?utm_source=bing&utm_medium=udemyads&utm_campaign=BG-Orig-LongTail_la.EN_cc.BE_Experiment_2&utm_content=deal4584&utm_term=_._ag_1326013382487324_._ad__._kw_Front%20End%20Web%20Development%20Class_._de_c_._dm__._pl__._ti_kwd-82876834267355:loc-4118_._li_83177_._pd__._&matchtype=b&msclkid=15abb6fe640418589222d0905fd7b3b1">Udemy</a>
             <a href="https://www.coursera.org/courses?query=web%20development">Coursera</a>
             <a href="https://validator.w3.org/">W3C HTML and CSS Validation</a>
         </section>
