--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="styles/base.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A page that contains my information as well as web developement resources">
+    <meta name="description" content="Week 1 about me activity">
     <meta name="author" content="Gracie Burris">
     <title>WDD 131 - Dynamic Web Fundamentals - Gracie Burris</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <script src="./getdates.js" defer></script>
+    <script src="./scripts/getdates.js" defer></script>
 </head>
 <body class="home-grid">
     <header>
